exports[`Section renders its children 1`] = `
<styled.section
  textAlign="left">
  <p>
    Foo
  </p>
</styled.section>
`;

exports[`Section renders its children with Spacer component 1`] = `
<styled.section
  textAlign="left">
  <Spacer
    type="topbottom"
    value={4}>
    <p>
      Foo
    </p>
  </Spacer>
</styled.section>
`;

exports[`Section renders textAlign prop 1`] = `
<styled.section
  textAlign="center" />
`;

exports[`Section renders with default props 1`] = `
<styled.section
  textAlign="left" />
`;
